# medrisk-features

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/medrisk_features/: __init__.py
src/medrisk_features/features/: __init__.py  behavioral.py  clinical.py  demographics.py  lifestyle.py  medical.py  metabolic.py
src/medrisk_features/logging/: __init__.py  default_logger.py
src/medrisk_features/pipeline/: __init__.py  feature_engineering_pipeline.py
src/medrisk_features/preprocessing/: __init__.py  categorical_cleaning.py  leakage.py
src/medrisk_features/validation/: __init__.py  schema.py
tests/: conftest.py  test_demographics.py  test_medical.py  test_pipeline.py  test_schema_validation.py
