[tool.poetry]
name = "medrisk-features"
version = "0.1.0"
description = "Professional medical, metabolic and lifestyle feature engineering for ML risk models"
authors = ["Manda Surel <s239150.eps@gmail.com>"]
readme = "README.md"
packages = [{ include = "medrisk_features", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
numpy = "^1.24"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"